--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,58 +1,57 @@
-.header{
+.header {
     width: 100%;
     height: 70px;
     line-height: 70px;
-}
-
-.nav__wraper{
+  }
+  
+  .nav__wrapper {
     display: flex;
     align-items: center;
     justify-content: space-between;
-}
-
-.logo{
+  }
+  
+  .logo {
     display: flex;
     align-items: center;
     column-gap: 8px;
-
-}
-
-.logo img{
+  }
+  
+  .logo img {
     width: 1.5rem;
     height: 1.5rem;
-}
-
-.logo h1{
+  }
+  
+  .logo h1 {
     font-size: 1.2rem;
     font-weight: 600;
     color: var(--primary-color);
-}
-
-.menu{
+  }
+  
+  .menu {
     display: flex;
     align-items: center;
     column-gap: 1.2rem;
     margin-bottom: 0;
-}
-
-.nav__item a{
+  }
+  
+  .nav__item a {
     color: var(--primary-color);
     font-weight: 500;
     cursor: pointer;
-}
-
-.nav__icons{
+  }
+  
+  .nav__icons {
     display: flex;
     align-items: center;
     column-gap: 1.2rem;
-}
-
-.cart__icon, .fav__icon{
+  }
+  
+  .cart__icon,
+  .fav__icon {
     position: relative;
-
-}
-
-.badge{
+  }
+  
+  .badge {
     position: absolute;
     top: 25%;
     right: -25%;
@@ -65,29 +64,30 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    font-size: .6rem;
-    font-weight: 600px;
+    font-size: 0.6rem;
+    font-weight: 600;
     z-index: 10;
-}
-
-.nav__icons span i{
+  }
+  
+  .nav__icons span i {
     font-size: 1.4rem;
     color: var(--primary-color);
     cursor: pointer;
-}
-
-.nav__icons span img{
+  }
+  
+  .nav__icons span img {
     width: 30px;
     height: 30px;
     cursor: pointer;
-}
-
-.bags_menu{
+  }
+  
+  .bags_menu {
     font-size: 1.3rem;
     color: var(--primary-color);
     display: none;
-}
-
+  }
+  
 .nav__active{
-    font-weight: 600 !important;
+  font-weight: 600 !important	; 
 }
+  
