--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -1,9 +1,30 @@
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .header {
     width: 100%;
     height: 70px;
     line-height: 70px;
   }
   
+  .containerNav {
+    text-align: center;
+    height: 20px;
+    width: 100%;
+    background-color: rgb(25, 25, 56);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .message {
+    font-size: 10px;
+    padding: 10px;
+    color: #fff;
+  }
   .nav__wrapper {
     display: flex;
     align-items: center;
@@ -14,6 +35,7 @@
     display: flex;
     align-items: center;
     column-gap: 8px;
+    margin-top: -6px;
   }
   
   .logo img {
