--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -8,6 +8,7 @@
     align-items: center;
     cursor: pointer;
     transition: background-color 0.3s ease-in-out;
+    margin-top: 20px;
   }
   
   .buy_btn:hover {
@@ -36,11 +37,16 @@
     font-size: 13px;
     margin: 0;
     margin-top: -50px;
-    margin: 20px 0px;
   }
-  
   
   .parallax-background {
-    filter: brightness(0.3);
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.7);
+    pointer-events: none;
   }
+  
   
