--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -126,3 +126,67 @@
   box-shadow: 3px 3px 8px -3px #ddd;
   background-color: #fff;
 }
+
+@media only screen and (max-width:768px){
+  .navigation{
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 9999;
+    display: none;
+  }
+
+  .menu{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 250px;
+    height: 100%;
+    background: #fff;
+    z-index: 99999;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .nav__active{
+    display: block;
+  }
+
+  .bags_menu{
+    display: block;
+  }
+
+  .bags_menu span i{
+    font-size: 1.1rem !important;
+  }
+
+  .logo img{
+    width: 1.1rem;
+    height: 1.1rem;
+    margin-top: 8px;
+  }
+
+  .logo h1{
+    font-size:1.1rem;
+  }
+
+  .fav__icon i,
+  .cart__icon i{
+    font-size: 1.2rem !important;
+  }
+
+  .nav__icons span img{
+    width: 1.5rem;
+    height: 1.5rem;
+    margin-top: -10px !important;
+  }
+
+  .header{
+    height: 100%;
+    height: 80px;
+    line-height: 60px;
+  }
+}
