--- a/src/services/services.css
+++ b/src/services/services.css
@@ -26,3 +26,30 @@
     font-weight: 600;
     margin: 0; /* Added: Remove top and bottom margins for headings */
 }
+
+@media only screen and (max-width:992px){
+    .service__item span i{
+        font-size: 1.8rem;
+        padding: 5px;
+    }
+
+    .service__item h3{
+        font-size: 1rem;
+    }
+
+    .service__item{
+        padding: 10px;
+    }
+
+}
+
+@media only screen and (max-width:768px){
+    .service__item{
+        margin-bottom: 1.5rem;
+
+    }
+    .service__item span i{
+        font-size: 1.5rem;
+        padding: 5px;
+    }
+}
