--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -95,38 +95,38 @@
 }
 
 .marka__logo {
+  text-align: center;
   display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
 
-.refiry__logo {
-  width: 200px;
-  text-align: center;
-  margin-left: 100px !important;
-}
-
+.refiry__logo,
 .cut__logo {
-  width: 130px;
   text-align: center;
-  margin-right: 400px !important;
+  margin-bottom: 30px;
 }
 
-.refiry__logo-text,
+.refiry__logo img {
+  max-width: 100%;
+  height: auto;
+}
+
+.refiry__logo-text {
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.5;
+}
+
+.cut__logo img {
+  max-width: 100%;
+  height: auto;
+  margin-left: 0;
+}
+
 .cut__logo-text {
-  white-space: nowrap;
-  font-size: 13px;
-  padding: 20px 0px;
-  white-space: 20px;
-}
-
-.refiry__logo img{
-  align-items: center;
-  margin-left: 100px!important;
-}
-
-.cut__logo img{
-  margin-left: 150px!important;
+  text-align: center;
+  font-size: 12px;
+  line-height: 1.5;
+  margin-left: 0;
 }
 
 @media only screen and (max-width:992px){
@@ -143,5 +143,76 @@
   }  
   .hero__content h2{
     font-size: 1.8rem;
+  }
+}
+
+@media (min-width: 768px) and (max-width: 1023px)  {
+  .marka__logo {
+    display: block;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .refiry__logo,
+  .cut__logo {
+    text-align: center;
+    margin-bottom: 60px;
+  }
+
+  .refiry__logo img {
+    width: 250px;;
+    height: auto;
+  }
+
+  .refiry__logo-text {
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.5rem;
+  }
+
+  .cut__logo img {
+    width: 170px;
+    height: auto;
+    margin-left: 0;
+  }
+
+  .cut__logo-text {
+    text-align: center;
+    font-size: 12px;
+    line-height: 1.5;
+    margin-left: 0;
+  }
+}
+
+@media (min-width: 1024px) {
+  .marka__logo {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+  }
+
+  .refiry__logo,
+  .cut__logo {
+    flex: 1;
+    text-align: center;
+  }
+
+  
+  .cut__logo img {
+    width: 170px;;
+    height: auto;
+  }
+
+  .refiry__logo img{
+    width: 250px;;
+    height: auto;
+  }
+
+  .refiry__logo-text,
+  .cut__logo-text {
+    text-align: center;
+    font-size: 15px;
+    line-height: 1rem;
   }
 }
