--- a/src/styles/lookbook.css
+++ b/src/styles/lookbook.css
@@ -71,4 +71,30 @@
     margin-left: 15px;
 }
 
+.lookbokk__text {
+    text-align: center;
+    font-size: 35px;
+    color: #333;
+    padding: 20px 0;
+    position: relative;
+    margin-bottom: 20px;
+}
+
+.lookbokk__text::before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 2px;
+    background-color: #333;
+    bottom: 0;
+    left: 0;
+    transform: scaleX(0);
+    transform-origin: bottom right;
+    transition: transform 0.3s ease-in-out;
+}
+
+.lookbokk__text:hover::before {
+    transform: scaleX(1);
+    transform-origin: bottom left;
+}
 
