--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -90,5 +90,29 @@
     transform-origin: bottom left;
 }
 
-
-
+.about__img {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    gap: 15px;
+  }
+  
+  .about__img img {
+    width: 100%; 
+    height: 100%; 
+    object-fit: cover;
+    border-radius: 10px;
+    transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+  }
+  
+  .about__img img:hover {
+    transform: scale(1.01);
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  }
+  
+  @media (max-width: 768px) {
+    .about__img {
+      grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); 
+    }
+  }
+  
+  
