--- a/src/styles/productDetails.css
+++ b/src/styles/productDetails.css
@@ -153,6 +153,12 @@
     font-size: 20px;
     margin-bottom: 10px;
   }
+
+  .categry__name{
+    font-size: 13px !important;
+    color: #515050 !important;
+    font-weight: 400 !important;
+  }
   
   .form__group {
     margin-bottom: 15px;
