--- a/src/styles/common-section.css
+++ b/src/styles/common-section.css
@@ -45,3 +45,13 @@
     }
 }
 
+@media only screen and (max-width:768px) {
+    .common__section{
+        padding: 70px 0px;
+    }
+
+    .common__section h1{
+        font-style: 1.4rem;
+    }
+}
+
