--- a/src/styles/cart.css
+++ b/src/styles/cart.css
@@ -2,33 +2,51 @@
 .table {
     width: 100%;
     border-collapse: collapse;
-  }
-  
-  .table th, .table td {
+}
+
+.table th, .table td {
     padding: 10px;
     text-align: center;
     vertical-align: middle;
-  }
+}
 
-  .table th {
+.table th {
     background-color: #f2f2f2;
-  }
-  
-  .table tbody td:nth-child(even) {
+}
+
+.table tbody td:nth-child(even) {
     background-color: #f9f9f9;
-  }
-  
-  .table tbody td img {
+}
+
+.table tbody td img {
     max-width: 100px;
     height: auto;
-  }
-  
-  .table tbody td i {
+}
+
+.table tbody td i {
     color: red;
     cursor: pointer;
-  }
-  
-  .table tbody td i:hover {
+}
+
+.table tbody td i:hover {
     color: darkred;
-  }
- 
+}
+
+@media (max-width: 418px) {
+    .table td, .table th {
+        display: block;
+        text-align: center;
+    }
+    
+    .table td {
+        text-align: center;
+    }
+
+    .table th::before, .table td::before {
+        content: attr(data-label);
+        font-weight: bold;
+        display: inline-block;
+        width: 100%;
+        text-align: center;
+    }
+}
