--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -256,3 +256,68 @@
     line-height: 1rem;
   }
 }
+
+.home__img {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.home1, .home2, .home3 {
+  width: 400px;
+  height: 500px;
+  border-radius: 10px;
+  transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+}
+
+.home1:hover, .home2:hover, .home3:hover {
+  transform: scale(1.01);
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+
+.image-container {
+  position: relative;
+  text-align: center;
+}
+
+.image-text {
+  position: absolute;
+  bottom: 10px;
+  left: 0;
+  width: 100%;
+  background-color: rgba(0, 0, 0, 0.7);
+  color: white;
+  padding: 5px 0;
+  font-size: 14px;
+  font-weight: bold;
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.image-container:hover .image-text {
+  opacity: 1;
+}
+
+@media (max-width: 768px) {
+  .home__img {
+    grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); 
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .home__img {
+    flex-direction: column;
+    align-items: center;
+  }
+
+  .image-container {
+    margin-bottom: 20px;
+  }
+}
+
+@media screen and (min-width: 769px) and (max-width: 1024px) {
+  .home__img {
+    justify-content: center;
+  }
+}
