--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -321,3 +321,29 @@
     justify-content: center;
   }
 }
+
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  width: 250px;
+  transform: translate(-50%, -50%);
+  background-color: rgba(0, 0, 0, 0.5);
+  color: pink;
+  padding: 25px 40px;
+  font-size: 35px;
+  font-weight: bold;
+  border-radius: 5px; 
+  opacity: 0; 
+  transition: opacity 0.3s ease, font-size 0.3s ease; 
+}
+
+.image-container:hover .overlay-text {
+  opacity: 1; 
+  font-size: 30px;
+}
