--- a/src/services/services.css
+++ b/src/services/services.css
@@ -2,18 +2,18 @@
     display: flex;
     align-items: center;
     padding: 20px;
-    margin-top: 460px;
+    margin-top: 250px;
     background-color: #ffffff;
     border-radius: 8px;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
     transition: transform 0.2s ease-in-out;
     gap: 0.5rem;
-    cursor: pointer; /* Added: Change cursor to a pointer */
+    cursor: pointer;
 }
 
 .service__item p {
     font-size: 12px;
-    margin: 0; /* Added: Remove top and bottom margins for paragraphs */
+    margin: 0; 
 }
 
 .service__item span i {
@@ -24,7 +24,7 @@
     color: #172336;
     font-size: 1.1rem;
     font-weight: 600;
-    margin: 0; /* Added: Remove top and bottom margins for headings */
+    margin: 0;
 }
 
 @media only screen and (max-width:992px){
