--- a/src/styles/login.css
+++ b/src/styles/login.css
@@ -60,4 +60,34 @@
   p a:hover {
     text-decoration: underline;
   }
+
+
+.form__group input[type="file"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 16px;
+    background-color: #f9f9f9;
+  }
+  
+  .form__group input[type="file"]:focus {
+    outline: none;
+    border-color: #007bff;
+  }
+  
+  .form__group input[type="file"]::file-selector-button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 5px;
+    padding: 5px 10px;
+    font-size: 14px;
+    cursor: pointer;
+  }
+  
+  .form__group input[type="file"]::file-selector-button:hover {
+    background-color: #0056b3;
+  }
+  
   
