--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -99,10 +99,35 @@
     cursor: pointer;
   }
   
-  .nav__icons span img {
+  .nav__icons .profile{
+     position: relative;
+     z-index: 9;
+  }
+
+  .nav__icons .profile .profile__actions{
+    position: absolute;
+    top: 98%;
+    left: 0;	
+    width: 150px;
+    z-index: 10;
+    padding: 15px;
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    background: #ffffff;
+    line-height: 30px;
+    display: none;
+    cursor: pointer;
+  }
+
+  .show__profileActions{
+    display: block;
+  }
+  .nav__icons .profile img {
     width: 30px;
     height: 30px;
     cursor: pointer;
+    border-radius: 50%;
   }
   
   .bags_menu {
