--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -104,25 +104,37 @@
      z-index: 9;
   }
 
-  .nav__icons .profile .profile__actions{
-    position: absolute;
-    top: 98%;
-    left: 0;	
+  .nav__icons .profile .profile__actions {
+    position: fixed;
+    top: 70px;
+    right: 25px;
     width: 150px;
     z-index: 10;
     padding: 15px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    background: #ffffff;
+    background: #1a1a1a;
     line-height: 30px;
     display: none;
     cursor: pointer;
+    transform: scale(0.8); 
+    transform-origin: top right; 
+    border-radius: 10px;
+    color: #fff;
+    font-size: 16px;
+    font-weight: 600;
+    text-align: center;
   }
-
-  .show__profileActions{
+  
+  .show__profileActions {
     display: block;
   }
+  .nav__icons .profile .profile__actions.show__profileActions {
+    display: block;
+  }
+  
+  
   .nav__icons .profile img {
     width: 30px;
     height: 30px;
@@ -135,6 +147,7 @@
     color: var(--primary-color);
     display: none;
   }
+  
   
 .nav__active{
   font-weight: 700 !important	; 
