--- a/src/styles/gummy.css
+++ b/src/styles/gummy.css
@@ -73,3 +73,58 @@
       margin: 20px 0;
     }
   }
+  .share-button button {
+    background-color: #007bff;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    padding: 10px 20px;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    font-size: 16px;
+    font-weight: bold;
+    margin-left: 40px;
+    margin-top: -5px;
+  }
+  
+  .share-button button:hover {
+    background-color: #0056b3;
+  }
+  
+
+  .share-options {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin-top: 10px;
+  }
+  
+  .share h2
+ {
+    color: #333;
+    font-weight: 600;
+    font-size: 16px;
+    margin-top: 5px;
+  }
+  .share h2:hover{
+    color: #0056b3;
+  }
+  .insta{
+    color: #000000;
+    font-weight: 600;
+    font-size: 16px;
+    margin-top: -3px;
+    margin-left: 40px;
+  }
+  .insta:hover{
+    color: #0056b3;
+  }
+  
+  .share a:hover {
+    text-decoration: underline;
+  }
+
+  .share h2 {
+    color: rgb(0, 0, 0);
+    text-decoration: none;
+}
