--- a/src/styles/productDetails.css
+++ b/src/styles/productDetails.css
@@ -222,3 +222,70 @@
   }
   
   
+  .kindof {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 20px;
+    background-color: #f0f0f0;
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    max-width: 300px;
+    margin: 0 auto;
+    margin-top: 100px;
+}
+
+.kindof img {
+    max-width: 100%;
+    border-radius: 50%;
+    margin-bottom: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+}
+
+.kindof h2 {
+    font-size: 1.5rem;
+    color: #333;
+    margin: 0;
+}
+
+.kindof h4 {
+    font-size: 13px;
+    color: #777;
+    margin-top: 10px;
+}
+
+.kindof2 {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  padding: 20px;
+  background-color: #f0f0f0;
+  border-radius: 10px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  max-width: 300px;
+  margin: 0 auto;
+  margin-top: 100px;
+}
+
+.kindof2 img {
+  max-width: 100%;
+  border-radius: 60%;
+  margin-bottom: 20px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  margin-top: 20px;
+}
+
+.kindof2 h2 {
+  font-size: 1.5rem;
+  color: #333;
+  margin: 0;
+  margin-top: 30px;
+}
+
+.kindof2 h4 {
+  font-size: 13px;
+  color: #777;
+  margin-top: 10px;
+}
