Fav card edded some change

--- a/src/styles/fav.css
+++ b/src/styles/fav.css
@@ -29,14 +29,18 @@
   }
   
   button {
-    color: rgb(207, 52, 52);
+    color: rgb(0, 0, 0);
     border: none;
     padding: 10px 20px;
     cursor: pointer;
+    background-color: white;
+    font-weight: 500;
   }
   
   button:hover {
     color: red;
     
   }
- 
+.ri-delete-bin-line{
+  background-color: white;
+}
