--- a/src/styles/productDetails.css
+++ b/src/styles/productDetails.css
@@ -229,5 +229,39 @@
     vertical-align: middle;
   }
   
-  
+
+.product__review {
+  padding: 20px;
+  background-color: #f9f9f9;
+  border-radius: 8px;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+}
+
+.comment {
+  margin-bottom: 20px;
+  padding: 10px;
+  background-color: #fff;
+  border-radius: 8px;
+  box-shadow: 0px 0px 5px rgba(0, 0, 0, 0.1);
+}
+
+.comment__user {
+  font-weight: bold;
+  margin-bottom: 5px;
+  color: #333;
+}
+
+.comment__rating {
+  margin-bottom: 10px;
+}
+
+.comment__rating i {
+  color: #f2b01e;
+  font-size: 18px;
+}
+
+.comment__message {
+  color: #555;
+}
+
 
