all function correct working in shop page added

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 /* Google Fonts */
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700;800&display=swap");
+@import "~bootstrap/dist/css/bootstrap.min.css";
 
 /* CSS Variables */
 :root {
