--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -14,7 +14,7 @@
     text-align: center;
     height: 20px;
     width: 100%;
-    background-color: rgb(27, 27, 27);
+    background-color: rgb(0, 0, 0);
     display: flex;
     justify-content: center;
     align-items: center;
@@ -31,23 +31,11 @@
     justify-content: space-between;
   }
   
-  .logo {
-    display: flex;
-    align-items: center;
-    column-gap: 8px;
-    margin-top: -6px;
-    cursor: pointer;
-  }
-  
-  .logo img {
-    width: 1.5rem;
-    height: 1.5rem;
-  }
-  
   .logo h1 {
     font-size: 1.2rem;
     font-weight: 600;
     color: var(--primary-color);
+    margin-right: 10px;
   }
   
   .menu {
@@ -210,6 +198,7 @@
 
   .logo h1{
     font-size:1.1rem;
+    margin-right: 20px !important;
   }
 
   .fav__icon i,
