--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -397,3 +397,34 @@
   transform: translateY(0);
   transition: transform 0.3s ease;
 }
+
+.video-container {
+  position: relative;
+  padding-bottom: 56.25%;
+  overflow: hidden;
+  width: 100%; 
+}
+
+.video-container video {
+  position: absolute;
+  top: 0;
+  
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.video-container {
+  position: relative;
+  overflow: hidden;
+  padding-bottom: 56.25%; /* 16:9 oranı korumak için */
+}
+
+/* Videoların içeriğini tam ekran yapmak için */
+.video-container video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
