--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -417,14 +417,44 @@
 .video-container {
   position: relative;
   overflow: hidden;
-  padding-bottom: 56.25%; /* 16:9 oranı korumak için */
+  padding-bottom: 56.25%;
 }
 
-/* Videoların içeriğini tam ekran yapmak için */
 .video-container video {
   position: absolute;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
+}
+@media (max-width: 768px) {
+
+  .prada1 {
+    max-width: 100%;
+    height: 600px; 
+  }
+
+  .video__text {
+    font-size: 14px;
+    font-weight: bold;
+  }
+  .video__text1{
+    font-size: 9px;
+    margin-right: 10px !important;
+  }
+  
+  .video1 .video2  {
+    max-width: 100%;
+    height: auto !important; 
+  }
+
+  .video2{
+    height: 200px !important;
+  }
+
+  .prada2{
+    max-width: 100%;
+    height: 85px !important;
+  }
+  
 }
